tests/toy/neg/000963_mutation.toylang
program a = { if a then do; } .
